
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static int put_value(unsigned char *data, size_t value, size_t len)
{
    if (data == ((void*)0))
        return 1;

    for (data += len - 1; len > 0; len--) {
        *data = (unsigned char)(value & 0xff);
        data--;
        value >>= 8;
    }


    if (value > 0)
        return 0;

    return 1;
}
